# Machine-Learning-Study

./: pyproject.toml
Binarização/: BinarizacaoEscalaDeCinzas.py
Module-1/: FirstCode.ipynb
Python-Module-Begginer/: RNmnist.ipynb
Scilab-Module-Begginer/: FirstCode.sci  FirstPlot.sci
TransferLearning-Finetunning/: transferLearning.ipynb
