[project]
name = "machine-learning-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.0",
    "ipython>=9.4.0",
    "matplotlib>=3.10.3",
    "matplotlib-inline>=0.1.7",
    "numpy>=2.3.1",
    "scikit-learn>=1.7.1",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
]
